--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "ranieriiuri",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.9.5"
   }
 }
