--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
+# Dependências
 node_modules/
+
+# Arquivo de log
+*.log
+
+# Arquivos de ambiente
+.env
+.env.local
+.env.production
+
+# IDEs
+.vscode/
+.idea/
+
+# Build e distribuições
+dist/
+build/
+
+# Arquivos temporários de sistema
+.DS_Store
+Thumbs.db
+
+# Outros arquivos gerados
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
